# vesna

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  ai.py  chat.py  cli.py  config.py  docker-compose.yml  ingest.py  llm_summarizer.py  logging_setup.py  pyproject.toml  requirements-extras-llm.txt  requirements-extras-sources.txt  requirements-extras.txt  requirements.txt  run.sh  scheduler.py  setup.sh  test_search.py  vector_store.py
.github/workflows/: docker-publish.yml  release.yml  tests.yml
agents/obsidian/: __init__.py  manager.py
agents/web_research/: __init__.py  agent.py  working_agent.py
cli/: assistant.py
configs/agents/: core.yaml  daily_news.yaml  example.yaml  weekly_digest.yaml
orchestrator/: __init__.py  cli.py  registry.py  runner.py
pipelines/: __init__.py  finance_health_steps.py  steps.py
scripts/: fetch_youtube.sh
tests/: test_agent_and_store.py  test_config.py  test_ingest.py  test_registry_cli.py  test_web_agent_import.py
tmp_data/: mini.csv  mini_real.csv  test.config.yaml
tmp_vault/Entities/Glossary/: AI.md
tmp_vault/Notes/Finance/: daily-2025-08-24.md  import-mini-20250824-231837.md  ledger.csv
tmp_vault/Notes/Health/: daily-2025-08-24.md
tmp_vault/Notes/Journal/Daily/: daily-2025-08-24.md
tmp_vault/Notes/Suggestions/: suggestions-2025-08-24.md
