[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-agents-stack"
version = "0.1.0"
description = "AI Agents Stack: web research + Obsidian + Qdrant"
readme = "README.md"
authors = [{ name = "KoooD8" }]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
ai = "ai:main"

[tool.setuptools]
packages = []

